--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <main class="container">
         <section class="hero" id="hero-section">
             <div class="hero-text">
-                <h1>Racibórz<br>Przewodnik Po Pizzeriach</h1>
+                <h1>Racibórz<br>Przewodnik<br> Po Pizzeriach</h1>
                 <button class="btn-gold">autorstwo: WK. KZ. ŁM.</button>
             </div>
             <img src="img/pizza_hero.png" alt="Pizza" class="hero-pizza">
@@ -343,4 +343,5 @@
 </body>
 
 </html>
+
 
