--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         
         header { 
             display: flex; 
-            
+            justify-content: center; 
             align-items: center; 
-            padding:0px 0 30px 0;
+            padding:60px 0 30px 0;
+            margin-top: 30px;
         }
 
         .logo { display: flex; align-items: center; gap: 10px; color: white; text-decoration: none; cursor: pointer; }
@@ -343,6 +344,7 @@
 </body>
 
 </html>
+
 
 
 
